# ff

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  rust-toolchain.toml
.github/: CODE_OF_CONDUCT.md  (+3 more)
crates/avio/: Cargo.toml  README.md
crates/avio/examples/: add_watermark.rs  async_decode_audio.rs  async_decode_image.rs  async_decode_video.rs  async_encode_audio.rs  async_encode_video.rs  async_transcode.rs  audio_codec_options.rs  audio_filters.rs  audio_raw_dump.rs  audio_timestamps.rs  audio_transcode.rs  codec_options.rs  concat_clips.rs  container_format.rs  dash_output.rs  decode_format_convert.rs  decode_from_url.rs  decode_image.rs  decode_iterator.rs  encode_audio_direct.rs  encode_image.rs  encode_video_direct.rs  encode_with_progress.rs  extract_thumbnails.rs  fanout_output.rs  filter_direct.rs  frame_pool_usage.rs  hls_output.rs  hw_transcode.rs  hwaccel_encode.rs  image_sequence.rs  live_abr_ladder.rs  probe_info.rs  professional_formats.rs  rtmp_output.rs  srt_output.rs  tone_map_hdr.rs  transcode.rs  trim_and_scale.rs  (+4 more)
crates/avio/examples/analysis/: black_frames.rs  frame_extraction.rs  histogram.rs  keyframes.rs  loudness.rs  quality_metrics.rs  scene_detection.rs  scope_analyzer.rs  silence_detection.rs  thumbnail_selector.rs  waveform.rs
crates/avio/examples/async/: async_encode_audio.rs  async_encode_video.rs  async_transcode.rs
crates/avio/examples/decode/: decode_image.rs  decode_iterator.rs  decode_metadata.rs  decode_scaled.rs  decode_to_pcm.rs  hardware_decode.rs  openexr_sequence.rs
crates/avio/src/: lib.rs
crates/avio/tests/: feature_combinations_test.rs  feature_combinations_tests.rs
crates/ff/: Cargo.toml  README.md
crates/ff-common/: Cargo.toml  README.md
crates/ff-common/src/: lib.rs  pool.rs
crates/ff-decode/: Cargo.toml  README.md
crates/ff-decode/benches/: decode_bench.rs
crates/ff-decode/examples/: check_hw_accel.rs
crates/ff-decode/fuzz/: Cargo.toml
crates/ff-decode/src/: async_decoder.rs  error.rs  hardware.rs  lib.rs  network.rs
crates/ff-decode/tests/: analysis_tests.rs  async_audio_decoder_tests.rs  async_video_decoder_tests.rs  audio_decoder_tests.rs  black_frame_detector_tests.rs  dash_stream_tests.rs  exr_sequence_tests.rs  extract_frame_tests.rs  frame_extractor_tests.rs  hardware_accel_tests.rs  histogram_extractor_tests.rs  hls_stream_tests.rs  image_decoder_tests.rs  image_sequence_tests.rs  iterator_tests.rs  keyframe_enumerator_tests.rs  memory_usage_tests.rs  network_tests.rs  output_scale_tests.rs  performance_validation_tests.rs  reconnect_tests.rs  scene_detector_tests.rs  scope_analyzer_tests.rs  silence_detector_tests.rs  srt_stream_tests.rs  thumbnail_selector_tests.rs  thumbnail_tests.rs  udp_stream_tests.rs  video_decoder_tests.rs  video_seeking_tests.rs  waveform_analyzer_tests.rs
crates/ff-encode/: Cargo.toml  README.md
crates/ff-encode/examples/: gen_bench_asset.rs  list_encoders.rs
crates/ff-encode/fuzz/: Cargo.toml
crates/ff-encode/src/: async_encoder.rs  bitrate.rs  codec.rs  container.rs  error.rs  hardware.rs  lib.rs
crates/ff-encode/tests/: advanced_codec_options_tests.rs  async_encoder_tests.rs  audio_adder_tests.rs  audio_encoder_tests.rs  audio_extractor_tests.rs  audio_replacement_tests.rs  codec_selection_tests.rs  error_handling_tests.rs  gif_preview_tests.rs  h264_options_tests.rs  image_encoder_tests.rs  image_sequence_encoder_tests.rs  preset_tests.rs  preview_tests.rs  professional_format_tests.rs  progress_callback_tests.rs  sprite_sheet_tests.rs  stream_copy_trimmer_tests.rs  video_audio_integration_tests.rs  video_encoder_tests.rs
crates/ff-filter/: Cargo.toml  README.md
crates/ff-filter/src/: blend.rs  error.rs  filter_inner.rs  graph.rs  lib.rs
crates/ff-filter/tests/: analysis_tests.rs  animation_integration_test.rs  audio_effect_tests.rs  blend_reference_tests.rs  compositing_pipeline_tests.rs  composition_tests.rs  filter_chain_tests.rs  loudness_meter_tests.rs  lut_tests.rs  push_pull_tests.rs  quality_metrics_tests.rs  serde_tests.rs  stabilizer_tests.rs  video_effect_tests.rs
crates/ff-pipeline/: Cargo.toml  README.md
crates/ff-pipeline/src/: audio_pipeline.rs  clip.rs  encoder_config.rs  error.rs  lib.rs  pipeline.rs  progress.rs  thumbnail.rs  timeline.rs  video_pipeline.rs
crates/ff-pipeline/tests/: audio_pipeline_tests.rs  pipeline_run_tests.rs  thumbnail_pipeline_tests.rs  timeline_tests.rs  video_pipeline_tests.rs
crates/ff-preview/: Cargo.toml  README.md
crates/ff-preview/benches/: preview_bench.rs
crates/ff-preview/src/: cache.rs  error.rs  event.rs  lib.rs
crates/ff-preview/tests/: av_sync_test.rs  proxy_test.rs  rgba_sink_test.rs  seek_exact_test.rs
crates/ff-probe/fuzz/: Cargo.toml
crates/ff-render/: Cargo.toml  README.md
crates/ff-render/src/: context.rs  error.rs  lib.rs
crates/ff-render/tests/: render_graph_tests.rs
crates/ff-stream/: Cargo.toml  README.md
crates/ff-stream/src/: abr.rs  builder_macros.rs  codec_utils.rs  dash.rs  dash_inner.rs  error.rs  fanout.rs  hls.rs  hls_inner.rs  lib.rs  live_abr.rs  live_dash.rs  live_dash_inner.rs  live_hls.rs  live_hls_inner.rs  muxer_core.rs  output.rs  rtmp.rs  rtmp_inner.rs  srt_output.rs  srt_output_inner.rs
crates/ff-stream/tests/: abr_ladder_tests.rs  dash_output_tests.rs  fanout_output_tests.rs  hls_output_tests.rs  live_abr_ladder_tests.rs  live_dash_tests.rs  live_hls_tests.rs  rtmp_output_tests.rs  srt_output_tests.rs
crates/ff-sys/: Cargo.toml  README.md  build.rs  wrapper.h
crates/ff-sys/benches/: swresample_bench.rs  swscale_bench.rs
crates/ff-sys/src/: avcodec.rs  avformat.rs  constants.rs  docsrs_stubs.rs  error_codes.rs  lib.rs  swresample.rs  swscale.rs  utils.rs
crates/ff/src/: lib.rs
ff-format/: Cargo.toml  README.md
ff-format/src/: channel.rs  codec.rs  color.rs  error.rs  lib.rs  media.rs  stream.rs  time.rs
ff-format/src/frame/: video.rs
ff-probe/: Cargo.toml  README.md
ff-probe/benches/: probe_bench.rs
ff-probe/src/: info.rs  lib.rs
ff-probe/tests/: integration_tests.rs  performance_validation_tests.rs
(+348 files in other folders)
