[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.14.1"
edition = "2024"
rust-version = "1.93.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/itsakeyfut/avio"
authors = ["itsakeyfut"]

[workspace.dependencies]
# Internal ff-* dependencies
ff-sys      = { path = "crates/ff-sys",      version = "0.14.1" }
ff-common   = { path = "crates/ff-common",   version = "0.14.1" }
ff-format   = { path = "crates/ff-format",   version = "0.14.1" }
ff-probe    = { path = "crates/ff-probe",    version = "0.14.1" }
ff-decode   = { path = "crates/ff-decode",   version = "0.14.1" }
ff-encode   = { path = "crates/ff-encode",   version = "0.14.1" }
ff-filter   = { path = "crates/ff-filter",   version = "0.14.1" }
ff-pipeline = { path = "crates/ff-pipeline", version = "0.14.1" }
ff-stream   = { path = "crates/ff-stream",   version = "0.14.1" }
ff-preview  = { path = "crates/ff-preview",  version = "0.14.1" }
ff-render   = { path = "crates/ff-render",   version = "0.14.1" }
avio        = { path = "crates/avio",         version = "0.14.1" }

# Error handling
thiserror = "2.0.17"

# Logging
log = "0.4.29"

# Image processing
image = { version = "0.25.9", default-features = false }

# Build tools
bindgen = "0.72.1"
pkg-config = "0.3.32"
vcpkg = "0.2.15"

# Async runtime
tokio   = { version = "1.50.0", features = ["rt"] }
futures = { version = "0.3.32" }

# Testing
criterion = "0.8.1"

# OS
winapi = "0.3.9"

[workspace.lints.rust]
unsafe_code = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Enable lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Deny dangerous patterns
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Allow reasonable exceptions
module_name_repetitions = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
if_not_else = "allow"
match_same_arms = "allow"
uninlined_format_args = "allow"
redundant_closure_for_method_calls = "allow"
