[package]
name = "avio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Safe, high-level audio/video/image processing for Rust — backend-agnostic multimedia toolkit"
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["video", "audio", "ffmpeg", "multimedia", "codec"]
categories = ["multimedia::video", "multimedia::audio", "multimedia::encoding"]

[features]
default = ["probe", "decode", "encode"]
probe    = ["dep:ff-probe"]
decode   = ["dep:ff-decode"]
encode   = ["dep:ff-encode"]
filter   = ["dep:ff-filter"]
pipeline = ["dep:ff-pipeline", "filter"]
stream   = ["dep:ff-stream", "pipeline"]
tokio    = ["decode", "encode", "ff-decode/tokio", "ff-encode/tokio"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ff-format = { workspace = true }
ff-common = { workspace = true }
ff-probe    = { workspace = true, optional = true }
ff-decode   = { workspace = true, optional = true }
ff-encode   = { workspace = true, optional = true }
ff-filter   = { workspace = true, optional = true }
ff-pipeline = { workspace = true, optional = true }
ff-stream   = { workspace = true, optional = true }

[[example]]
name = "probe_info"
required-features = ["probe"]

[[example]]
name = "transcode"
required-features = ["pipeline"]

[[example]]
name = "extract_thumbnails"
required-features = ["pipeline", "encode"]

[[example]]
name = "trim_and_scale"
required-features = ["pipeline"]

[[example]]
name = "concat_clips"
required-features = ["pipeline", "probe"]

[[example]]
name = "add_watermark"
required-features = ["pipeline", "decode", "encode"]

[[example]]
name = "decode_image"
required-features = ["decode"]

[[example]]
name = "encode_image"
required-features = ["decode", "encode"]

[[example]]
name = "hls_output"
required-features = ["stream"]

[[example]]
name = "abr_ladder"
required-features = ["stream", "probe"]

[[example]]
name = "audio_transcode"
required-features = ["pipeline", "decode", "encode"]

[[example]]
name = "dash_output"
required-features = ["stream"]

[[example]]
name = "video_effects"
required-features = ["pipeline"]

[[example]]
name = "audio_filters"
required-features = ["pipeline"]

[[example]]
name = "two_pass_encode"
required-features = ["pipeline", "decode", "encode"]

[[example]]
name = "write_metadata"
required-features = ["pipeline", "decode", "encode"]

[[example]]
name = "hw_transcode"
required-features = ["pipeline"]

[[example]]
name = "video_transcode"
required-features = ["pipeline", "encode"]

[[example]]
name = "audio_raw_dump"
required-features = ["decode"]

[[example]]
name = "decode_to_pcm"
required-features = ["decode"]

[[example]]
name = "encode_audio_direct"
required-features = ["decode", "encode"]

[[example]]
name = "encode_video_direct"
required-features = ["decode", "encode"]

[[example]]
name = "decode_format_convert"
required-features = ["decode"]

[[example]]
name = "decode_scaled"
required-features = ["decode"]

[[example]]
name = "filter_direct"
required-features = ["decode", "encode", "filter"]

[[example]]
name = "encode_with_progress"
required-features = ["decode", "encode"]

[[example]]
name = "hardware_decode"
required-features = ["decode"]

[[example]]
name = "frame_pool_usage"
required-features = ["decode"]

[[example]]
name = "container_format"
required-features = ["decode", "encode"]

[[example]]
name = "tone_map_hdr"
required-features = ["pipeline", "probe"]

[[example]]
name = "decode_iterator"
required-features = ["decode"]

[[example]]
name = "async_decode_video"
required-features = ["tokio"]

[[example]]
name = "async_decode_audio"
required-features = ["tokio"]

[[example]]
name = "async_decode_image"
required-features = ["tokio"]

[[example]]
name = "async_encode_video"
required-features = ["tokio"]

[[example]]
name = "async_encode_audio"
required-features = ["tokio"]

[[example]]
name = "async_transcode"
required-features = ["tokio"]

[dev-dependencies]
futures = { workspace = true }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
