[package]
name = "ff-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Common types and utilities for FFmpeg-based media processing"
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["video", "audio", "ffmpeg", "media", "common"]
categories = ["multimedia::video", "multimedia::audio"]

[dependencies]
log = { workspace = true }

[lints]
workspace = true
