[package]
name = "ff-filter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Video and audio filter graph operations - the Rust way"
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["video", "audio", "ffmpeg", "filter", "effect"]
categories = ["multimedia::video", "multimedia::audio"]

[features]
serde = ["dep:serde"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ff-common  = { workspace = true }
ff-format  = { workspace = true }
ff-sys     = { workspace = true }
log        = { workspace = true }
thiserror  = { workspace = true }
serde      = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
ff-decode  = { workspace = true }
ff-encode  = { workspace = true }
ff-probe   = { workspace = true }
image      = { workspace = true, features = ["png"] }
serde_json = "1.0.149"

[lints]
workspace = true
