[package]
name = "ff-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Unified decode-filter-encode pipeline for the ff-* crate family"
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["video", "audio", "ffmpeg", "pipeline", "transcode"]
categories = ["multimedia::video", "multimedia::audio"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
parallel = ["dep:rayon"]

[dependencies]
ff-common  = { workspace = true }
ff-format  = { workspace = true }
ff-decode  = { workspace = true }
ff-filter  = { workspace = true }
ff-encode  = { workspace = true }
log        = { workspace = true }
thiserror  = { workspace = true }
rayon      = { version = "1.11.0", optional = true }

[dev-dependencies]
ff-probe = { workspace = true }

[lints]
workspace = true
